// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`connectors > metrics > simple > calculateModelVolume > basic aggregation 1`] = `
[
  [
    [
      {
        "$match": {
          "createdAt": {
            "$gte": 2026-01-01T00:00:00.000Z,
            "$lte": 2026-01-10T00:00:00.000Z,
          },
        },
      },
      {
        "$group": {
          "_id": {
            "$dateTrunc": {
              "date": "$createdAt",
              "unit": "day",
            },
          },
          "count": {
            "$sum": 1,
          },
        },
      },
      {
        "$sort": {
          "_id": 1,
        },
      },
      {
        "$project": {
          "_id": 0,
          "count": 1,
          "periodEnd": {
            "$dateAdd": {
              "amount": 1,
              "startDate": "$_id",
              "unit": "day",
            },
          },
          "periodStart": "$_id",
        },
      },
    ],
  ],
]
`;

exports[`connectors > metrics > simple > calculateModelVolume > with organisation filter 1`] = `
[
  [
    [
      {
        "$match": {
          "createdAt": {
            "$gte": 2026-01-01T00:00:00.000Z,
            "$lte": 2026-02-01T00:00:00.000Z,
          },
          "organisation": "org-1",
        },
      },
      {
        "$group": {
          "_id": {
            "$dateTrunc": {
              "date": "$createdAt",
              "timezone": "UTC",
              "unit": "week",
            },
          },
          "count": {
            "$sum": 1,
          },
        },
      },
      {
        "$sort": {
          "_id": 1,
        },
      },
      {
        "$project": {
          "_id": 0,
          "count": 1,
          "periodEnd": {
            "$dateAdd": {
              "amount": 1,
              "startDate": "$_id",
              "timezone": "UTC",
              "unit": "week",
            },
          },
          "periodStart": "$_id",
        },
      },
    ],
  ],
]
`;
